--- a/random.ipynb
+++ b/random.ipynb
@@ -25,11 +25,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<img src=\"7896.jpg\" width=300px>"
+   ]
   }
  ]
 }
