--- a/random.ipynb
+++ b/random.ipynb
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![test | width = 10px](7896.jpg)"
+    "![test](7896.jpg =200x)"
    ]
   },
   {
